# debug-env

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  inference.py  openenv.yaml  pushignore.txt  pyproject.toml  requirements.txt  start.sh  train.py  verify_setup.py
debug_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
debug_env/data/: __init__.py  multi_user_sample.py
debug_env/rl/: __init__.py  dataset.py  rollout.py
debug_env/server/: Dockerfile  __init__.py  app.py  debug_env_environment.py  grader.py
debug_env/server/core/: apis.py
debug_env/server/database/: __init__.py  db.py
debug_env/server/database/managers/: __init__.py  task_manager.py
debug_env/server/database/models/: __init__.py  task.py
debug_env/server/handlers/: __init__.py  mcp_handler.py
debug_env/server/mcp/: router.py
debug_env/server/mcp/tools/: __init__.py  debug_tools.py
debug_env/server/schemas/: __init__.py  task_schemas.py  tool_schemas.py
debug_env/server/tasks/: __init__.py  data.py  loader.py  router.py
debug_env/server/tools/: __init__.py  advanced_tools.py  tool_handlers.py
debug_env/server/tools/edit_file/: tool.py
debug_env/server/tools/list_files/: __init__.py  tool.py
debug_env/server/tools/read_file/: __init__.py  tool.py
debug_env/server/tools/run_tests/: __init__.py  tool.py
debug_env/server/utils/: __init__.py  validation.py
debug_env/tasks/task1/: broken_code.py  test_code.py
debug_env/tasks/task2/: broken_code.py  broken_code_solution.py  test_code.py
debug_env/tasks/task3/: broken_code.py  helper.py  helper_solution.py  test_code.py
debug_env/tasks/task4/: __init__.py  seed_data.py
debug_env/tasks/task5/: __init__.py  seed_data.py
debug_env/tasks/task6/: __init__.py  seed_data.py
debug_env/tasks/task7/: __init__.py  seed_data.py
debug_env/tasks/task8/: __init__.py  seed_data.py
debug_env/tasks/task9/: __init__.py  seed_data.py
server/: app.py
